exports[`test Child nodes 1`] = `
"<div class=\"pe-list pe-list--borders\">
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test No options 1`] = `
"<div class=\"pe-list\"></div>
"
`;

exports[`test Option: after 1`] = `
"<div class=\"pe-list pe-list--header\">
  <div class=\"pe-list-tile pe-list__header\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          My header
        </div>
      </div>
    </div>
  </div>
  <div>
    After
  </div>
</div>
"
`;

exports[`test Option: before 1`] = `
"<div class=\"pe-list pe-list--header\">
  <div>
    Before
  </div>
  <div class=\"pe-list-tile pe-list__header\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          My header
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: class 1`] = `
"<div class=\"pe-list class-x\"></div>
"
`;

exports[`test Option: compact 1`] = `
"<div class=
\"pe-list pe-list--borders pe-list--header pe-list--compact\">
  <div class=\"pe-list-tile pe-list__header\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <a href=\"#!/\" class=\"pe-list-tile__primary\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Jennifer Barker
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Starting post doc
      </div>
    </div></a>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: element 1`] = `
"<blockquote class=\"pe-list\"></blockquote>
"
`;

exports[`test Option: header 1`] = `
"<div class=\"pe-list pe-list--header\">
  <div class=\"pe-list-tile pe-list__header\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          My header
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: hoverable -- dark theme 1`] = `
"<div class=
\"pe-list pe-list--borders pe-list--hoverable pe-list--header\">
  <div class=\"pe-list-tile pe-list__header\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: hoverable 1`] = `
"<div class=
\"pe-list pe-list--borders pe-list--hoverable pe-list--header\">
  <div class=\"pe-list-tile pe-list__header\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: id 1`] = `
"<div id=\"id-x\" class=\"pe-list\"></div>
"
`;

exports[`test Option: selectable 1`] = `
"<div class=
\"pe-list pe-list--borders pe-list--selectable pe-list--header\">
  <div class=\"pe-list-tile pe-list__header\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: tiles 1`] = `
"<div class=\"pe-list pe-list--borders\">
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Options: header, tiles with urls 1`] = `
"<div class=\"pe-list pe-list--borders pe-list--header\">
  <div class=\"pe-list-tile pe-list__header\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <a href=\"#!/\" class=\"pe-list-tile__primary\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Jennifer Barker
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Starting post doc
      </div>
    </div></a>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <a href=\"#!/\" class=\"pe-list-tile__primary\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ali Connors
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Brunch this weekend?
      </div>
    </div></a>
  </div>
</div>
<div class=\"pe-list pe-list--borders pe-list--header\">
  <div class=\"pe-list-tile pe-list__header\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <a href=\"#!/\" class=\"pe-list-tile__primary\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Jennifer Barker
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Starting post doc
      </div>
    </div></a>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <a href=\"#!/\" class=\"pe-list-tile__primary\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ali Connors
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Brunch this weekend?
      </div>
    </div></a>
  </div>
</div>
"
`;

exports[`test Options: header.sticky 1`] = `
"<div class=\"scrollable-list\">
  <div class=\"pe-list pe-list--header\">
    <div class=\"pe-list-tile pe-list-tile--sticky pe-list__header\">
      <div class=\"pe-list-tile__primary\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Subheader
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
  </div>
  <div class=\"pe-list pe-list--header\">
    <div class=\"pe-list-tile pe-list-tile--sticky pe-list__header\">
      <div class=\"pe-list-tile__primary\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Subheader
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
  </div>
  <div class=\"pe-list pe-list--header\">
    <div class=\"pe-list-tile pe-list-tile--sticky pe-list__header\">
      <div class=\"pe-list-tile__primary\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Subheader
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
  </div>
  <div class=\"pe-list pe-list--header\">
    <div class=\"pe-list-tile pe-list-tile--sticky pe-list__header\">
      <div class=\"pe-list-tile__primary\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Subheader
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
  </div>
  <div class=\"pe-list pe-list--header\">
    <div class=\"pe-list-tile pe-list-tile--sticky pe-list__header\">
      <div class=\"pe-list-tile__primary\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Subheader
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
  </div>
</div>
"
`;

exports[`test Options: tiles, indent, indentedBorders 1`] = `
"<div class=\"pe-list pe-list--indented-borders pe-list--header\">
  <div class=\"pe-list-tile pe-list-tile--front pe-list__header\">
    <div class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\"></div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\"></div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\"></div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
</div>
"
`;
